jupyter lab test to drafts

--- a/posts/Test Jupyter Lab.ipynb
+++ b/posts/Test Jupyter Lab.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "12499e88-08d8-42af-8bab-1890d29d9d1b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Jupyter Lab Test\"\n",
@@ -12,6 +16,7 @@
     "    html:\n",
     "        code-fold: true\n",
     "jupyter: python3\n",
+    "draft: true\n",
     "---"
    ]
   },
