Moved around posts, and added a landing page for physics notes. added link to navbar as well. no notes yet.

--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,11 @@
 ---
 title: "soysaucescholar"
 listing:
-  contents: posts
+  contents: posts/blogposts
   sort: "date desc"
   type: default
   categories: true
 ---
 
-Here's some things of mine.
+Here's some things.
 
